timer: add increment

--- a/angular-app/src/app/components/timer/timer.component.html
+++ b/angular-app/src/app/components/timer/timer.component.html
@@ -1,4 +1,4 @@
 <div class="container text-center">
     <p>{{ date | date:'HH:mm' }}</p>
-    <button class="btn btn-outline-success btn-primary" style="color: white;" (click)="ajoutMinute()">+30min</button>
+    <button class="btn btn-outline-success btn-primary" style="color: white;" (click)="incrementMinutes()">+30min</button>
 </div>
