Refactor app component structure and update timer component

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
-<app-timer></app-timer>
-<app-piece></app-piece>
+<div class="container">
+    <app-piece></app-piece>
+    <app-timer></app-timer>
+</div>
 <app-footer></app-footer>
