Mise à jour des composants footer et navbar

--- a/angular-app/src/app/components/footer/footer.component.html
+++ b/angular-app/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
-    <button (click)="signalProblem()" type="button" class="btn btn-danger">Signaler un Problème</button>
+    <div class="container">
+            <button (click)="signalProblem()" type="button" class="btn btn-danger">Signaler un Problème</button>
+    </div>
 </footer>
