--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light container">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Gestion domotique</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-direction: row-reverse;">
-        <form class="d-flex">
-          <button class="btn btn-outline-success btn-primary" type="submit" style="color: white;">Accès Administrateur</button>
-        </form>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Gestion domotique</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-direction: row-reverse;">
+      <form class="d-flex">
+        <button class="btn btn-outline-success btn-primary" type="submit" style="color: white;">Accès
+          Administrateur</button>
+      </form>
     </div>
-  </nav>
+  </div>
+</nav>
