Update piece component to add dynamic behavior and improve UI

--- a/angular-app/src/app/components/piece/piece.component.html
+++ b/angular-app/src/app/components/piece/piece.component.html
@@ -14,13 +14,19 @@
             <tbody>
                 <tr *ngFor="let piece of pieces">
                     <td>
-                        <div class="status-circle" [class.status-green]="piece.status === true"
-                            [class.status-red]="piece.status === false" [class.status-blue]="piece.status === null">
+                        <div class="status-circle" 
+                            [class.status-green]="piece.status === true"
+                            [class.status-red]="piece.status === false">
                         </div>
                     </td>
-                    <td class="text-center">{{piece.name}}</td>
+                    <td class="text-center">{{ piece.name }}</td>
                     <td class="text-right">
-                        <button class="btn btn-primary w-100" (click)="toggleStatus(piece)">Forçage</button>
+                        <button class="btn" 
+                            [class.btn-success]="piece.status === true" 
+                            [class.btn-danger]="piece.status === false"
+                            (click)="toggleStatus(piece)">
+                            Forçage
+                        </button>
                     </td>
                 </tr>
             </tbody>
