System de log et déplacement de la fonction Signaler un pb

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -2,5 +2,7 @@
 <div class="container">
     <app-piece></app-piece>
     <app-timer></app-timer>
+    <app-signal></app-signal>
+    <app-log></app-log>
 </div>
 <app-footer></app-footer>
