Ajout d'un formulaire pour ajouter des instruction dans le fichier json et permettre de l'afficher sur la page

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-    <app-piece></app-piece>
-    <app-timer></app-timer>
-    <app-signal></app-signal>
-    <app-log></app-log>
+    <router-outlet></router-outlet>
+
 </div>
 <app-footer></app-footer>
