--- a/angular-app/src/app/components/footer/footer.component.html
+++ b/angular-app/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
-<footer>
-    <div class="container">
-            <button (click)="signalProblem()" type="button" class="btn btn-danger">Signaler un Problème</button>
+<footer class="bg-body-tertiary text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2024 Copyright:
+        <a class="text-body" href="#">IPSSI</a>
+        <button (click)="signalProblem()" type="button" class="btn btn-danger mx-4">Signaler un Problème</button>
     </div>
 </footer>
