--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-direction: row-reverse;">
       <form class="d-flex">
-        <button class="btn btn-outline-success btn-primary" type="submit" style="color: white;">Accès Administrateur</button>
+        <a class="btn btn-outline-success btn-secondary" type="submit" style="color: white;" href="/instruction">Instruction</a>
+        <button class="btn btn-outline-success btn-primary mx-5" type="submit" style="color: white;">Accès Administrateur</button>
       </form>
     </div>
   </div>
